changed scrollbar design, fixed the position of background

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h3 {
 
 
 .jumbotron {
-  padding: 16rem;
+  padding: 15rem;
   /* padding-top: 18rem; */
   text-align: center;
   background-image: linear-gradient(
@@ -33,7 +33,7 @@ h3 {
       rgba(0, 0, 0, 0.6) 100%
     ),
     url(images/daily-planner-thestreet.jpeg);
-  background-attachment: static;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -61,11 +61,11 @@ h3 {
 }
 
 .btn_back a:hover{
-    background-color: rgb(125, 182, 248);
+    background-color: rgb(101, 124, 150);
     font-size: 25px;
     border: 2px solid white;
     color: black;
-    transition: .2s;
+    transition: .5s;
     transform: scale(1.1);
     box-shadow: 0 0 15px #fff;
 }
@@ -250,6 +250,7 @@ font-weight: 700;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 9px;
 }
 #div1{
   padding: 1rem;  
@@ -258,9 +259,9 @@ font-weight: 700;
   color: #fff;
   font-weight: 300;
   }
-  .darkmode #img{
+  /* .darkmode #img{
    
-  }
+  } */
 
 .darkmode .shadow-textarea textarea.form-control {
   color: #d3d3d3;
@@ -296,6 +297,7 @@ align-items: center;
 justify-content: center;
 width: 80%;
 height: 35rem;
+padding: 10px;
 }
 
 *{
@@ -428,4 +430,21 @@ body{
         border-radius: 50%;
     }
 
+}
+/* Scroll bar modification starts from here */
+::-webkit-scrollbar{
+  width: 13px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: rgb(48, 47, 47);
+  border-radius: 4px;
+}
+::-webkit-scrollbar-track{
+  background-color: rgb(22, 21, 21);
+}
+::-webkit-scrollbar-button{
+  display: none;
+}
+::-webkit-scrollbar-corner{
+  display: none;
 }
